navbar em andamento

--- a/index.html
+++ b/index.html
@@ -5,23 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
     <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica&display=swap">
   </head>
   <body>
+    <header>
+      <nav>
+        <img class="logo"src="logo.png" alt="Logo Instituto de computação">
+          <u1 class="nav-links">
+            <li><a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/index.html" > Home</a></li>
+            <li><a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/palestrantes.html" >Palestrantes</a></li>
+            <li><a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/agenda.html">Agenda</a></li>
+            <li><a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/sessoes.html">Sessões</a></li>
+            <li><a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/ingressos.html">Ingressos</a></li>
+            <li><a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/fale-conosco.html">Fale conosco</a></li>
+          </u1>      
+    </nav>
+    </header>
     <main>
       <div class="flexbox-capa">
         <img class="capa1"src="capa-index.jpg" alt="Capa senhor dos anéis">
       </div>
       <h1>Semana da computação</h1>  
     </main>
-    <nav>
-      
-        <a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/index.html" > Home</a>
-        <a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/palestrantes.html" >Palestrantes</a>
-        <a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/agenda.html">Agenda</a>
-        <a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/sessoes.html">Sessões</a>
-        <a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/ingressos.html">Ingressos</a>
-        <a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/fale-conosco.html">Fale conosco</a>
     
-    </nav>
   </body>
 </html>
