navbar quase ok

--- a/index.html
+++ b/index.html
@@ -9,24 +9,32 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="navbar">
         <img class="logo"src="logo.png" alt="Logo Instituto de computação">
-          <u1 class="nav-links">
-            <li><a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/index.html" > Home</a></li>
-            <li><a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/palestrantes.html" >Palestrantes</a></li>
-            <li><a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/agenda.html">Agenda</a></li>
-            <li><a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/sessoes.html">Sessões</a></li>
-            <li><a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/ingressos.html">Ingressos</a></li>
-            <li><a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/fale-conosco.html">Fale conosco</a></li>
-          </u1>      
+          <ul class="nav-links">
+            <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/index.html" > Home</a></li>
+            <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/palestrantes.html" >Palestrantes</a></li>
+            <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/agenda.html">Agenda</a></li>
+            <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/sessoes.html">Sessões</a></li>
+            <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/ingressos.html">Ingressos</a></li>
+            <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/fale-conosco.html">Fale conosco</a></li>
+          </ul>      
     </nav>
     </header>
     <main>
-      <div class="flexbox-capa">
-        <img class="capa1"src="capa-index.jpg" alt="Capa senhor dos anéis">
-      </div>
-      <h1>Semana da computação</h1>  
+      <h1>Semana da computação</h1> 
+      <img class="capa-home"src="capa-home.png" alt="Foto do senhor dos aneis">
     </main>
-    
+    <footer>
+      <div class="footer-col">
+          <p>© Semana da Computação 2024 - Instituto de Computação</p>
+      </div>
+      <div class="footer-col">
+          <p>Desenvolvido por: Time Vermelho</p>   
+      </div>
+    </footer>
   </body>
+
+  
+  
 </html>
