--- a/test.html
+++ b/test.html
@@ -4,15 +4,16 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <nav>
-    <div class="logo">My Website</div>
+  <nav class="navbar">
+    <a href="https://freecodecamp.org" class="logo">
+      <img src="https://s3.amazonaws.com/freecodecamp/freecodecamp_logo.svg" alt="freeCodeCamp logo">
+    </a>
     <ul class="nav-links">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Contact</a></li>
+      <li class="nav-item"><a href="#">Curriculum</a></li>
+      <li class="nav-item"><a href="#">Forum</a></li>
+      <li class="nav-item"><a href="#">News</a></li>
+      <li class="nav-item"><a href="#">Sign in</a></li>
     </ul>
-    <div class="menu-icon">&#9776;</div>
   </nav>
   <script>
     function toggleMenu() {
