navbar quase lá

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
   </head>
   <body>
     <header>
+      <div class="flex-botao">
+        <button class="botao"onclick="toggleNavbar()">&#9776;</button>
+      </div>
+      <img class="logo"src="logo.png" alt="Logo Instituto de computação">
       <nav class="navbar">
-        <img class="logo"src="logo.png" alt="Logo Instituto de computação">
-          <ul class="nav-links">
+        <ul class="nav-links">
             <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/index.html" > Home</a></li>
             <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/palestrantes.html" >Palestrantes</a></li>
             <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/agenda.html">Agenda</a></li>
@@ -20,6 +23,7 @@
             <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/fale-conosco.html">Fale conosco</a></li>
           </ul>      
     </nav>
+      
     </header>
     <main>
       <h1>Semana da computação</h1> 
