--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica&display=swap">
   </head>
   <body>
+    <script src="index.js"></script>
     <header>
-      <div class="flex-botao">
-        <button class="botao"onclick="toggleNavbar()">&#9776;</button>
-      </div>
       <img class="logo"src="logo.png" alt="Logo Instituto de computação">
+      <div class="flex-botao">
+        <button id="aberto" class="botao">&#9776;</button>
+        <button id="fechado" class="botao">&#9776;</button>
+      </div>
       <nav class="navbar">
         <ul class="nav-links">
             <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/index.html" > Home</a></li>
