estrutura da pagina de ingresso feita

--- a/ingressos.html
+++ b/ingressos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica&display=swap">
   </head>
   <body class="container">
-    <header>
+  
       <nav class="navbar ">
         <img class="logo" src="logo.png" alt="Logo Instituto de computação">
           <ul class="nav-links">
@@ -20,11 +20,22 @@
             <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/fale-conosco.html">Fale conosco</a></li>
           </ul>      
       </nav>
-    </header>
+    
 
 
     <main class="main-grid">
-      
+      <div class="area1">
+      <img class="ingresso-pic" src="ingresso.png" alt="foto de ingresso">
+      <p>O ingresso é valido para qualquer dia e qualquer sessão, bastando apenas apresentá-lo ao entrar no evento.</p>
+    </div>
+
+      <div class="area2">
+        <p>Não perca a chance de participar deste evento único que combina o melhor da computação com a magia do Senhor dos Anéis. Garanta seu ingresso agora e prepare-se para uma experiência inesquecível na Semana da Computação UFRJ 2024!
+        </p>
+
+        <button class="botao">GARANTA SEU INGRESSO</button>
+
+      </div>
     </main>
 
 
