--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Pagina Inicial</title>
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica&display=swap">
   </head>
@@ -12,12 +12,12 @@
       <nav class="navbar">
         <img class="logo"src="logo.png" alt="Logo Instituto de computação">
           <ul class="nav-links">
-            <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/index.html" > Home</a></li>
-            <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/palestrantes.html" >Palestrantes</a></li>
-            <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/agenda.html">Agenda</a></li>
-            <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/sessoes.html">Sessões</a></li>
-            <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/ingressos.html">Ingressos</a></li>
-            <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/fale-conosco.html">Fale conosco</a></li>
+            <li><a class="nav-item" href="index.html" > Home</a></li>
+            <li><a class="nav-item" href="palestrantes.html" >Palestrantes</a></li>
+            <li><a class="nav-item" href="agenda.html">Agenda</a></li>
+            <li><a class="nav-item" href="sessoes.html">Sessões</a></li>
+            <li><a class="nav-item" href="ingressos.html">Ingressos</a></li>
+            <li><a class="nav-item" href="fale-conosco.html">Fale conosco</a></li>
           </ul>      
     </nav>
     </header>
