--- a/sessoes.html
+++ b/sessoes.html
@@ -15,12 +15,12 @@
     </main>
     <nav>
       
-        <a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/index.html" > Home</a>
-        <a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/palestrantes.html" >Palestrantes</a>
-        <a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/agenda.html">Agenda</a>
-        <a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/sessoes.html">Sessões</a>
-        <a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/ingressos.html">Ingressos</a>
-        <a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/fale-conosco.html">Fale conosco</a>
+      <li><a class="nav-item" href="index.html" > Home</a></li>
+      <li><a class="nav-item" href="palestrantes.html" >Palestrantes</a></li>
+      <li><a class="nav-item" href="agenda.html">Agenda</a></li>
+      <li><a class="nav-item" href="sessoes.html">Sessões</a></li>
+      <li><a class="nav-item" href="ingressos.html">Ingressos</a></li>
+      <li><a class="nav-item" href="fale-conosco.html">Fale conosco</a></li>
     
     </nav>
   </body>
