--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <header>
       <img class="logo"src="logo.png" alt="Logo Instituto de computação">
       <div class="flex-botao">
-        <button id="aberto" class="botao">&#9776;</button>
-        <button id="fechado" class="botao">&#9776;</button>
+        <button id="botao-navbar" class="botao">&#9776;</button>
       </div>
       <nav class="navbar">
         <ul class="nav-links">
@@ -27,18 +26,20 @@
     </nav>
       
     </header>
-    <main>
-      <h1>Semana da computação</h1> 
-      <img class="capa-home"src="capa-home.png" alt="Foto do senhor dos aneis">
-    </main>
-    <footer>
-      <div class="footer-col">
-          <p>© Semana da Computação 2024 - Instituto de Computação</p>
-      </div>
-      <div class="footer-col">
-          <p>Desenvolvido por: Time Vermelho</p>   
-      </div>
-    </footer>
+    <div class="corpo-pagina">
+      <main>
+        <h1>Semana da computação</h1> 
+        <img class="capa-home"src="capa-home.png" alt="Foto do senhor dos aneis">
+      </main>
+      <footer>
+        <div class="footer-col">
+            <p>© Semana da Computação 2024 - Instituto de Computação</p>
+        </div>
+        <div class="footer-col">
+            <p>Desenvolvido por: Time Vermelho</p>   
+        </div>
+      </footer>
+    </div>
   </body>
 
   
