--- a/palestrantes.html
+++ b/palestrantes.html
@@ -9,16 +9,20 @@
   <body>
     <header>
         <img class="logo"src="logo.png" alt="Logo Instituto de computação">
-        <nav>
-            <ul class="nav-links">
-              <li><a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/index.html" > Home</a></li>
-              <li><a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/palestrantes.html" >Palestrantes</a></li>
-              <li><a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/agenda.html">Agenda</a></li>
-              <li><a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/sessoes.html">Sessões</a></li>
-              <li><a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/ingressos.html">Ingressos</a></li>
-              <li><a href="/home/devmob/Documentos/excluir/projeto-1-website-promove/fale-conosco.html">Fale conosco</a></li>
+        <div class="flex-botao">
+          <button id="botao-navbar" class="botao">&#9776;</button>
+        </div>
+        <nav class="navbar">
+          <ul class="nav-links">
+              <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/index.html" > Home</a></li>
+              <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/palestrantes.html" >Palestrantes</a></li>
+              <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/agenda.html">Agenda</a></li>
+              <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/sessoes.html">Sessões</a></li>
+              <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/ingressos.html">Ingressos</a></li>
+              <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/fale-conosco.html">Fale conosco</a></li>
             </ul>      
       </nav>
+        
       </header>
 
       <main>
