pagina de ingressos pronta

--- a/ingressos.html
+++ b/ingressos.html
@@ -27,10 +27,10 @@
       <div class="area1">
       <img class="ingresso-pic" src="ingresso.png" alt="foto de ingresso">
       <p>O ingresso é valido para qualquer dia e qualquer sessão, bastando apenas apresentá-lo ao entrar no evento.</p>
-    </div>
+      </div>
 
       <div class="area2">
-        <p>Não perca a chance de participar deste evento único que combina o melhor da computação com a magia do Senhor dos Anéis. Garanta seu ingresso agora e prepare-se para uma experiência inesquecível na Semana da Computação UFRJ 2024!
+        <p class="chamada-sc">Não perca a chance de participar deste evento único que combina o melhor da computação com a magia do Senhor dos Anéis. Garanta seu ingresso agora e prepare-se para uma experiência inesquecível na Semana da Computação UFRJ 2024!
         </p>
 
         <button class="botao">GARANTA SEU INGRESSO</button>
