--- a/palestrantes.html
+++ b/palestrantes.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
-  </head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Palestrantes</title>
+        <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica&display=swap">
+    </head>
   <body>
+    <script src="index.js"></script>
     <header>
         <img class="logo"src="logo.png" alt="Logo Instituto de computação">
         <div class="flex-botao">
