--- a/ingressos.html
+++ b/ingressos.html
@@ -8,10 +8,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica&display=swap">
   </head>
   <body class="container">
-  
-      <nav class="navbar ">
-        <img class="logo" src="logo.png" alt="Logo Instituto de computação">
-          <ul class="nav-links">
+    <script src="index.js"></script>
+    <header>
+      <img class="logo"src="logo.png" alt="Logo Instituto de computação">
+      <div class="flex-botao">
+        <button id="botao-navbar" class="botao">&#9776;</button>
+      </div>
+      <nav class="navbar">
+        <ul class="nav-links">
             <li><a class="nav-item" href="index.html" > Home</a></li>
             <li><a class="nav-item" href="palestrantes.html" >Palestrantes</a></li>
             <li><a class="nav-item" href="agenda.html">Agenda</a></li>
@@ -19,11 +23,11 @@
             <li><a class="nav-item" href="ingressos.html">Ingressos</a></li>
             <li><a class="nav-item" href="fale-conosco.html">Fale conosco</a></li>
           </ul>      
-      </nav>
-    
+    </nav>
+    </header>
 
+    <main class="corpo-pagina">
 
-    <main class="main-grid">
       <div class="area1">
       <img class="ingresso-pic" src="ingresso.png" alt="foto de ingresso">
       <p>O ingresso é valido para qualquer dia e qualquer sessão, bastando apenas apresentá-lo ao entrar no evento.</p>
@@ -33,9 +37,9 @@
         <p class="chamada-sc">Não perca a chance de participar deste evento único que combina o melhor da computação com a magia do Senhor dos Anéis. Garanta seu ingresso agora e prepare-se para uma experiência inesquecível na Semana da Computação UFRJ 2024!
         </p>
 
-        <button class="botao">GARANTA SEU INGRESSO</button>
-
+        <button class="botao ">GARANTA SEU INGRESSO</button>
       </div>
+      
     </main>
 
 
