--- a/contato.html
+++ b/contato.html
@@ -3,7 +3,7 @@
   <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contato</title>
+        <title>Fale conosco</title>
         <link rel="stylesheet" type="text/css" href="index.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica&display=swap">
   </head>
@@ -29,7 +29,7 @@
     <div class="corpo-pagina">
       <main>
         <div class="contato-title">
-            <h1>Contato</h1>
+            <h1>Fale conosco</h1>
         </div>
         <div class="container-card">
             <div class="card-contato">
@@ -43,6 +43,16 @@
                     <textarea type="text" rows="7" name="mensagem" placeholder="Digite sua mensagem" class="form-textarea"></textarea>
                     <button type="submit" class="form-button">Enviar</button>
                 </form>
+            </div>
+        </div>
+        <div class="redes">
+            <div class="redes-links">
+                <a href="https://www.instagram.com/semanadacomputacaoufrj/">
+                    <img src="icons_redes\logo-instagram.svg" alt="Ícone do Instagram" class="redes-link_instagram"> 
+                </a>
+                <a href="https://www.facebook.com/SemanaDaComputacaoUFRJ/">
+                    <img src="icons_redes\logo-facebook.svg" alt="Ícone do Facebook" class="redes-link_facebook"> 
+                </a>
             </div>
         </div>
       </main>
