--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       </div>
       <nav class="navbar">
         <ul class="nav-links">
-            <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/index.html" > Home</a></li>
-            <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/palestrantes.html" >Palestrantes</a></li>
-            <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/agenda.html">Agenda</a></li>
-            <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/sessoes.html">Sessões</a></li>
-            <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/ingressos.html">Ingressos</a></li>
-            <li><a class="nav-item" href="/home/devmob/Documentos/excluir/projeto-1-website-promove/fale-conosco.html">Fale conosco</a></li>
+            <li><a class="nav-item" href="index.html" > Home</a></li>
+            <li><a class="nav-item" href="palestrantes.html" >Palestrantes</a></li>
+            <li><a class="nav-item" href="agenda.html">Agenda</a></li>
+            <li><a class="nav-item" href="sessoes.html">Sessões</a></li>
+            <li><a class="nav-item" href="ingressos.html">Ingressos</a></li>
+            <li><a class="nav-item" href="fale-conosco.html">Fale conosco</a></li>
           </ul>      
     </nav>
       
