ingressos alterado para flex- 2

--- a/ingressos.html
+++ b/ingressos.html
@@ -3,17 +3,19 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Ingressos</title>
     <link rel="stylesheet" type="text/css" href="ingressos.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica&display=swap">
   </head>
   <body class="container">
     <script src="index.js"></script>
+
     <header>
       <img class="logo"src="logo.png" alt="Logo Instituto de computação">
       <div class="flex-botao">
         <button id="botao-navbar" class="botao">&#9776;</button>
       </div>
+      
       <nav class="navbar">
         <ul class="nav-links">
             <li><a class="nav-item" href="index.html" > Home</a></li>
